Update IAM ownership authorization model
